@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/gcompris/gcompris.c)
 AC_CANONICAL_HOST
-AM_INIT_AUTOMAKE(gcompris, 8.3.10)
+AM_INIT_AUTOMAKE(gcompris, 8.3.11)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
